# Jacob_enterprises_revamped

./: .gitignore  README.md  package-lock.json  package.json
src/: App.css  App.jsx  App.module.css  constants.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Float/: Floatingicon.css  Floatingicon.jsx  Floatingicon.module.css
src/Form/: CustomDateInput.module.css  CustomSelect.jsx  CustomSelect.module.css  DatePicker.module.css  Fan.jsx  Form.css  Form.jsx  Form.module.css  IconWave.jsx  IconWaveCanvas.css  Motor.jsx  PowerTools.jsx  ServiceForm.css  dat.jsx
src/Spare sell/: SpareSell.jsx  Sparesell.css
src/finance_page/: finance.jsx  finance.module.css
src/header/: header.jsx  header.module.css
src/home/: Home.css  Home.jsx  Home.module.css
src/home/dashboard/: DashboardView.module.css  dashboard.jsx
src/home/table/: TableComponent.module.css  table.jsx
